--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     xmlns:tools="http://schemas.android.com/tools"
 
     android:layout_width="match_parent"
@@ -8,24 +8,87 @@
     android:orientation="vertical"
     tools:context=".FirstActivity">
 
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="77dp"
+        android:layout_height="wrap_content"
+        android:text="NAME:"
+        android:textStyle="bold" />
+
     <EditText
         android:id="@+id/etName"
         android:layout_width="match_parent"
+        android:layout_height="58dp"
+        android:ems="5"
+        android:hint="@string/user_name"
+        android:inputType="text" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="BIRTHDAY DATE:"
+        android:textStyle="bold" />
+    <EditText
+        android:id="@+id/date"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:background="#d4d4d4"
+        android:hint="Select Birthday Date"
+        android:padding="15dp"
+        android:textColor="#b23a48"
+        android:textColorHint="#b23a48"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ADDRESS:"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/etAddress"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
         android:ems="10"
         android:inputType="text"
-        android:text="@string/user_name" />
+        android:hint="@string/address"
+        />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PHONE NUMBER:"
+        android:textStyle="bold" />
+    <EditText
+        android:id="@+id/etPhoneNum"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:ems="10"
+        android:inputType="phone"
+        android:hint="@string/phone_num" />
+
 
     <Button
         android:id="@+id/btnName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Send Data"
+        android:layout_gravity="center"
         android:onClick="send_data"
+        android:text="Send Data"
 
         />
 
+    <!--    <Spinner-->
+<!--        android:id="@+id/birth_date"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
 
-
+<!--        />-->
 
 </LinearLayout>
