--- a/app/src/main/res/layout/content_second.xml
+++ b/app/src/main/res/layout/content_second.xml
@@ -9,7 +9,27 @@
     <TextView
         android:id="@+id/tvUserName"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-    />
+        android:layout_height="43dp"
+        android:layout_gravity="center" />
+
+    <TextView
+        android:id="@+id/tvAddress"
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
+        android:layout_gravity="center" />
+
+    <TextView
+        android:id="@+id/tvPhoneNum"
+        android:layout_width="match_parent"
+        android:layout_height="47dp"
+        android:layout_gravity="center" />
+
+
+    <!--    <TextView-->
+<!--        android:id="@+id/tvBirthDate"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center" />-->
+
+
 </LinearLayout>
