--- a/app/src/main/res/layout/content_second.xml
+++ b/app/src/main/res/layout/content_second.xml
@@ -5,31 +5,47 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/tvInformation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_marginTop="80dp"
+        android:text="@string/info"
+        android:textStyle="bold"
+        android:textSize="26sp" />
 
     <TextView
         android:id="@+id/tvUserName"
         android:layout_width="match_parent"
-        android:layout_height="43dp"
-        android:layout_gravity="center" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp" />
+
+    <TextView
+        android:id="@+id/tvEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp" />
+
+    <TextView
+        android:id="@+id/tvBirthday"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp" />
 
     <TextView
         android:id="@+id/tvAddress"
         android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:layout_gravity="center" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp" />
 
     <TextView
         android:id="@+id/tvPhoneNum"
         android:layout_width="match_parent"
-        android:layout_height="47dp"
-        android:layout_gravity="center" />
-
-
-    <!--    <TextView-->
-<!--        android:id="@+id/tvBirthDate"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="center" />-->
-
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp" />
 
 </LinearLayout>
+
+
